# django-concat-js

./: README.md  pyproject.toml  tox.ini
.tox/.tmp/package/64/: concat_js-0.0.1-py3-none-any.whl
concat_js/: __about__.py  analyze_js.py  dep_graph.py  settings.py  watch_src.py
concat_js/management/commands/: watch_js.py
concat_js/test_app/: tests.py
concat_js/tests/: concat.json  manage.py  settings.py  tests.py
