[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "concat-js"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Antoine Louatron", email = "antoine.louatron@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/concat-js#readme"
Issues = "https://github.com/unknown/concat-js/issues"
Source = "https://github.com/unknown/concat-js"

[tool.hatch.version]
path = "concat_js/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  
]


